feat: add .env.example and update .gitignore and package.json for project setup

--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "seed": "",
+    "generate": "npx prisma generate"
+  },
   "dependencies": {
     "@grpc/grpc-js": "^1.13.4",
     "@grpc/proto-loader": "^0.7.15",
