feat: add seeding functionality with fake bill generation and update dependencies

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "seed": "",
+    "seed": "node src/database/seeders/seeder.js",
     "generate": "npx prisma generate"
   },
   "dependencies": {
@@ -12,7 +12,12 @@
     "@grpc/proto-loader": "^0.7.15",
     "@prisma/client": "^6.9.0",
     "amqplib": "^0.10.8",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
-    "prisma": "^6.9.0"
+    "prisma": "^6.9.0",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.8.0"
   }
 }
