refactor: update database configuration and schema, improve imports, and add migration files

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-NODE_ENV=development
-PORT=3000
+PORT=3002
 SERVER_URL=localhost
+NODE_ENV=development
 
-
-DATABASE_URL="mysql://<USER>:<PASSWORD>@localhost:3306/mydatabase"
-DATABASE_PASSWORD=""
-DATABASE_USER=""
+DATABASE_URL="mysql://root:rootpassword@localhost:3306/mydatabase"
+DATABASE_USER=user
+DATABASE_PASSWORD=userpassword
